--- a/src/Ivory.Soap/Ivory.Soap.csproj
+++ b/src/Ivory.Soap/Ivory.Soap.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<Version>0.0.1</Version>
+    <IsPackable>true</IsPackable>
 		<CodeAnalysisRuleSet>..\..\rules\production.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
