--- a/test/Ivory.Soap.UnitTests/Ivory.Soap.UnitTests.csproj
+++ b/test/Ivory.Soap.UnitTests/Ivory.Soap.UnitTests.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.2" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Ivory.Soap\Ivory.Soap.csproj" />
+    <ProjectReference Include="..\Ivory.SoapApi\Ivory.SoapApi.csproj" />
   </ItemGroup>
 
 </Project>
