--- a/test/Ivory.Soap.UnitTests/Ivory.Soap.UnitTests.csproj
+++ b/test/Ivory.Soap.UnitTests/Ivory.Soap.UnitTests.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Messages\*.*" />
+    <EmbeddedResource Include="Messages\*.*" />
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
