--- a/test/Ivory.Soap.UnitTests/Ivory.Soap.UnitTests.csproj
+++ b/test/Ivory.Soap.UnitTests/Ivory.Soap.UnitTests.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Ivory.Soap\Ivory.Soap.csproj" />
+    <ProjectReference Include="..\..\src\Test\Test.csproj" />
     <ProjectReference Include="..\Ivory.SoapApi\Ivory.SoapApi.csproj" />
   </ItemGroup>
 
