--- a/src/Ivory.Soap/Ivory.Soap.csproj
+++ b/src/Ivory.Soap/Ivory.Soap.csproj
@@ -6,6 +6,15 @@
 		<Version>0.0.1</Version>
     <IsPackable>true</IsPackable>
 		<CodeAnalysisRuleSet>..\..\rules\production.ruleset</CodeAnalysisRuleSet>
+		<Authors>Jack Kester, Corniel Nobel</Authors>
+		<Product>Ivory.NET SOAP</Product>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Ivory.Net.Soap</PackageId>
+    <PackageTags>ASP.NET Core SOAP</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
+		<Copyright>Copyright © 2020-current Jack Kester &amp; Corniel Nobel</Copyright>
+		<Description>SOAP for .NET Core 3.1</Description>
 	</PropertyGroup>
 
   <ItemGroup>
