--- a/src/Ivory.Soap/Ivory.Soap.csproj
+++ b/src/Ivory.Soap/Ivory.Soap.csproj
@@ -4,8 +4,22 @@
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<Version>0.0.1</Version>
-		<CodeAnalysisRuleSet>..\..\rules\production.ruleset</CodeAnalysisRuleSet>
+    <IsPackable>true</IsPackable>
+		<CodeAnalysisRuleSet>..\..\Ivory.Net.ruleset</CodeAnalysisRuleSet>
+		<Authors>Jack Kester, Corniel Nobel</Authors>
+		<Product>Ivory.NET SOAP</Product>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Ivory.Net.Soap</PackageId>
+    <PackageTags>ASP.NET Core SOAP</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
+		<Copyright>Copyright © 2020-current Jack Kester &amp; Corniel Nobel</Copyright>
+		<Description>SOAP for .NET Core 3.1</Description>
 	</PropertyGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
@@ -17,6 +31,21 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="SoapMessages.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>SoapMessages.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="SoapMessages.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>SoapMessages.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 </Project>
