--- a/test/Ivory.SoapApi/Ivory.SoapApi.csproj
+++ b/test/Ivory.SoapApi/Ivory.SoapApi.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Ivory.Soap\Ivory.Soap.csproj" />
+    <ProjectReference Include="..\Ivory.TestModels\Ivory.TestModels.csproj" />
   </ItemGroup>
 
 </Project>
